--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
     "core-js": "^3.6.5",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vue-svg-loader": "^0.16.0"
   },
